--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
 <!--inicio do layout de navegação -->
      <ul id="links"> 
         <h2>Contato</h2>
-        <li>  <a href="portifolio.html">portifolio</a> </li>
+        <li>  <a href="index.html">portifolio</a> </li>
         <li> <a href="sobre mim.html">sobre mim</a> </li>
         <li> <a href="formacao educacional.html">formação</a> </li>
         <li> <a href="idiomas.html">idiomas</a> </li>
