--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <h2>meu portifolio</h2>
 <!--inicio do layout de navegação -->
      <ul id="links"> 
-        <li> <a href="portifolio.html">portifolio</a> </li>
+        <li> <a href="index.html">portifolio</a> </li>
         <li> <a href="sobre mim.html">sobre mim</a> </li>
         <li> <a href="formacao educacional.html">formação</a> </li>
         <li> <a href="idiomas.html">idiomas</a> </li>
