--- a/contato.html
+++ b/contato.html
@@ -62,7 +62,7 @@
     <!-- fim do conteudo -->
 
     <!-- rodapé -->
-    <div id="rodape">
+    <div class="rodape">
     <h4>todos os direitos reservados</h4>
 </div>
 </body>
