--- a/idiomas.html
+++ b/idiomas.html
@@ -47,7 +47,7 @@
     <!-- fim do conteudo -->
 
     <!-- rodapé -->
-    <ul id="rodape">
+    <ul class="rodape">
     <h4>todos os direitos reservados</h4>
 </ul>
 </body>
