--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     <div id="conteudo">
         <p>bem vindo ao meu portifolio, aqui voce encontrara alguns dos meus projetos pessoais</p>
     </div>
+
+    <div id="portifolio">
+       <a href="modelo/index.html"><img src="imagens/site da modelo.jpg"></a> 
+       <a href="mcu/projeto site da facul/projeto mcu.html"><img src="imagens/site da faculdade.jpg"></a> 
+       <a href="tec blog/tec blog, site/index.html"><img src="imagens/tec blog.jpg"></a> 
+    </div>
     <!-- fim do conteudo -->
 
     <!-- rodapé -->
-    <div id="rodape">
+    <div class="rodape">
     <h4>todos os direitos reservados</h4>
 </div>
 </body>
