--- a/sobre mim.html
+++ b/sobre mim.html
@@ -35,7 +35,7 @@ Proativo e dedicado a buscar constantemente o aprimoramento profissional.</p>
     <!-- fim do conteudo -->
 
     <!-- rodapé -->
-    <div id="rodape">
+    <div class="rodape">
     <h4>todos os direitos reservados</h4>
 </div>
 </body>
