--- a/sobre mim.html
+++ b/sobre mim.html
@@ -25,7 +25,7 @@
     <div id="conteudo">
       
         <p>Olá, eu me chamo Gustavo e atualmente sou um estudante de Análise e desenvolvimento de sistemas, com sólidos conhecimentos em Tecnologia 
-da Informação. Como: DBMS, HTML5, CSS3, 
+da Informação, incluindo DBMS, HTML5, CSS3, 
 Bootstrap 4, JS, ES6, ES7, PHP 7, OO, MySQL, jQuery, MVC, API, IONIC e WordPress. Habilidades adquiridas 
 através de cursos, workshops e projetos práticos, incluindo configuração de redes, suporte 
 técnico e gerenciamento de sistemas. Motivado para aprender e aplicar novos conhecimentos, 
